SERVER-89413  Fix deadlock in TransactionRouter (#21256)

GitOrigin-RevId: dd4a8f224e8ba22caafb9471dba28efa37236f29